frontend/src/web/pages/HomePage/HomePage.module.css
.main {
  overflow: hidden;
}

.pageContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  row-gap: 30px;

  flex: 1;

  width: 375px;
  margin: 0 auto;
  padding: 26px 0;

  position: relative;
}

.titleButtonsContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  row-gap: 20px;
}

.title {
  font-size: 48px;
  line-height: 1.1;
  max-width: 718px;
  letter-spacing: 10px;

  color: var(--exploding-kittens);
  text-transform: uppercase;
  text-shadow:
    2px 0 0 var(--soft-black),
    -2px 0 0 var(--soft-black),
    0 2px 0 var(--soft-black),
    0 -2px 0 var(--soft-black),
    8px 8px var(--shadow);
}

.kittensSpan {
  font-size: 40px;
}

.buttonsContainer {
  display: flex;
  flex-direction: column;
  row-gap: 13px;

  width: 200px;
}

.buttonsContainer > a {
  min-width: 100%;
  padding-top: 7px;
  padding-bottom: 7px;

  font-size: 25px;
  line-height: 1.32;
}

.playButton {
  background-color: var(--exploding-kittens);
}

.watchButton {
  color: black;
  background-color: rgba(252, 248, 238, 0.6);
}

.catImage {
  position: absolute;
  top: 310px;
  left: 50%;
  transform: translateX(-50%);
}

@media only screen and (min-width: 768px) {
  .pageContainer {
    width: 768px;
    position: relative;
    flex-direction: row;
    align-items: flex-start;

    padding-top: 89px;
    padding-left: 38px;
  }

  .title {
    font-size: 100px;
    max-width: 558px;
  }

  .kittensSpan {
    font-size: 80px;
  }

  .titleButtonsContainer {
    align-items: flex-start;
  }
}

@media only screen and (min-width: 768px) and (max-width: 1439.98px) {
  .catImage {
    top: 300px;
    transform: translateX(-40px);
  }
}

@media only screen and (min-width: 1440px) {
  .pageContainer {
    width: 1440px;
    justify-content: space-between;
    align-items: center;
    padding-left: 71px;
    padding-top: 70px;
    padding-bottom: 70px;
  }

  .titleButtonsContainer {
    width: 100%;
    align-items: flex-start;

    max-width: 732px;
    row-gap: 80px;
  }

  .title {
    font-size: 120px;
  }

  .kittensSpan {
    font-size: 100px;
  }

  .buttonsContainer {
    width: 100%;
    flex-direction: row;
    justify-content: space-between;
  }

  .buttonsContainer > a {
    min-width: 300px;

    font-size: 40px;
    line-height: 1.3;
  }

  .catImage {
    top: 50%;
    transform: translate(150px, -50%);
  }

  @media only screen and (max-height: 1080px) {
    .catImage {
      top: 100px;
      transform: translate(150px, 0);
    }
  }
}

@media only screen and (min-width: 1920px) {
  .pageContainer {
    width: 1920px;
    padding: 70px 71px;
  }

  .title {
    font-size: 140px;
    max-width: 718px;
  }
}

